admin/css/login.css
*{
    margin:0;
    padding:0;
    box-sizing:border-box;
    font-family:Arial, Helvetica, sans-serif;
}

body{
    background:#0f172a;
    display:flex;
    justify-content:center;
    align-items:center;
    height:100vh;
}

.login-box{
    width:420px;
    background:#1e293b;
    padding:40px;
    border-radius:16px;
    box-shadow:0 10px 30px rgba(0,0,0,.35);
}

.login-box h1{
    color:#fff;
    margin-bottom:10px;
    text-align:center;
}

.login-box p{
    color:#94a3b8;
    margin-bottom:25px;
    text-align:center;
}

.login-box input{
    width:100%;
    padding:14px;
    margin-bottom:16px;
    border:none;
    border-radius:10px;
    background:#334155;
    color:#fff;
    font-size:16px;
}

.login-box input::placeholder{
    color:#94a3b8;
}

.login-box button[type="submit"]{
    width:100%;
    padding:14px;
    border:none;
    border-radius:10px;
    background:linear-gradient(90deg,#2563eb,#06b6d4);
    color:#fff;
    font-size:16px;
    cursor:pointer;
    transition:.3s;
}

.login-box button:hover{
    opacity:.9;
}
.admin-brand{
    display:flex;
    justify-content:center;
    align-items:baseline;
    gap:10px;
    margin-bottom:18px;
}

.logo{
    display:flex;
    align-items:center;
    font-size:34px;
    font-weight:800;
    color:#fff;
    line-height:1;
}

.logo-gradient{
    background:linear-gradient(135deg,#2563eb,#14f195);
    -webkit-background-clip:text;
    background-clip:text;
    color:transparent;
}

.logo::after{
    content:"";
    width:7px;
    height:7px;
    margin:10px 0 0 6px;
    border-radius:50%;
    background:#14f195;
    box-shadow:0 0 15px rgba(20,241,149,.8);
}

.admin-text{
    font-size:20px;
    font-weight:700;
    color:#fff;
    letter-spacing:2px;
}

.password-box{
    position:relative;
    margin-bottom:16px;
}

.password-box input{
    margin-bottom:0;
    padding-right:55px;
}

.toggle-password{
    position:absolute;
    top:50%;
    right:16px;
    transform:translateY(-50%);
    width:auto !important;
    height:auto;
    padding:0;
    margin:0;
    background:transparent !important;
    border:none;
    color:#94a3b8;
    cursor:pointer;
    font-size:18px;
    line-height:1;
    display:flex;
    align-items:center;
    justify-content:center;
}

